fix ticker gap

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -334,6 +334,7 @@ svg {
     display: flex;
 
     &__item {
+        padding: 0 20px;
         animation: ticker infinite 30s linear reverse;
     }
 }
